<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Biking Tour</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc_logo">Logo</string>
    <string name="action_settings">Settings</string>
    <string name="add_route">New Route</string>
    <string name="my_routes">My Routes</string>
    <string name="actual_location">Type your actual location:</string>
    <string name="destination">Type the desired destination:</string>
    <string name="submit">Submit</string>
    <string name="accept">Accept tour</string>
    <string name="cancel">Cancel</string>
    <string name="support">Logistical support along the tour (food, restaurants, etc):</string>
    <string name="desc_chart">Elevation chart</string>
    <string name="image_list">Image of the listview</string>
    <string name="take_photo">Photo</string>
    <string name="rec_video">Video</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Tour Review</item>
        <!-- <item>Search</item> -->
        <item>Help</item>
        <item >Statistics</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_review</item>
         <!-- <item>@drawable/ic_search</item> -->
        <item>@drawable/ic_help</item>
        <item>@drawable/ic_statistics</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="close_fragment_picture_button">Close picture fragment</string>
    <string name="record_video_button">Record video button</string>
    <string name="close_fragment_video_button">Close fragment video button</string>
    <string name="my_tours">My tours</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="route_length">Length : </string>
    <string name="route_origin">Origin : </string>
    <string name="route_destination">Destination : </string>
    <string name="route_difficulty">Difficulty : </string>
    <string name="route_map_image">Route map image</string>
    <string name="navigation_picture_button">Navigation picture button</string>
    <string name="navigation_video_button">Navigation video button</string>
    <string name="navigation_help_button">Navigation help button</string>
    <string name="places_restaurant">Restaurants</string>
    <string name="places_food">Food</string>
    <string name="places_bank">Banks</string>
    <string name="places_atm">ATMs</string>
    <string name="places_bicycle_store">Bicycle Stores</string>
    <string name="places_campground">Campgrounds</string>
    <string name="places_hospital">Hospitals</string>
    <string name="places_pharmacy">Pharmacies</string>
    <string name="places_police">Police</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_number_of_tours">Number of tours:</string>
    <string name="statistics_total_distance_covered">Distance covered:</string>
    <string name="statistics_biking_time">Biking time:</string>
    <string name="statistics_average_speed">Average speed:</string>
    <string name="statistics_longest_tour">Longest tour:</string>
    <string name="tour_origin">Tour origin:</string>
    <string name="tour_destination">Tour destination:</string>
    <string name="tour_date">Tour date:</string>
    <string name="tour_duration">Tour duration:</string>
    <string name="tour_length">Tour length:</string>
    <string name="tour_picture">Tour picture</string>
    <string name="no_pictures">There are no pictures</string>
    <string name="no_videos">There are no videos</string>
    <string name="delete_tour">Delete tour</string>
    <string name="share_picture">Share picture</string>
    <string name="delete_picture">Delete picture</string>
    <string name="tour_video">Tour video</string>
    <string name="share_video">Share video</string>
    <string name="delete_video">Delete video</string>
    
</resources>
