<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_help_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/places_food"/>
            <CheckBox 
                android:id="@+id/navigation_help_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>
        </LinearLayout>
        
    	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/places_bank"/>
            <CheckBox 
                android:id="@+id/navigation_help_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>
        </LinearLayout>
    	
    	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/places_atm"/>
            <CheckBox 
                android:id="@+id/navigation_help_atm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>
        </LinearLayout>
    	
    	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/places_bicycle_store"/>
            <CheckBox 
                android:id="@+id/navigation_help_bicycle_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>
        </LinearLayout>
    	
    	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/places_campground"/>
            <CheckBox 
                android:id="@+id/navigation_help_campground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>
        </LinearLayout>
    	
    	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/places_hospital"/>
            <CheckBox 
                android:id="@+id/navigation_help_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>
        </LinearLayout>
    	
    	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/places_pharmacy"/>
            <CheckBox 
                android:id="@+id/navigation_help_pharmacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>
        </LinearLayout>
    	
    	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/places_police"/>
            <CheckBox 
                android:id="@+id/navigation_help_police"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>
        </LinearLayout>
    	
    	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/places_restaurant"/>
            <CheckBox 
                android:id="@+id/navigation_help_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>
        </LinearLayout>
    	
    </LinearLayout>
</ScrollView>
