<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.7">
    
        <Chronometer 
            android:id="@+id/navigation_chronometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
    	<fragment
    		android:id="@+id/navigation_mapfragment"
        	android:name="com.google.android.gms.maps.MapFragment"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    	
        <Button 
    		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:id="@+id/navigation_button_picture"
        	android:layout_weight="0.3"
        	android:text="@string/take_photo"
       	 	style="@style/btnStyleArsenic" />
        
        <Button 
    		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:id="@+id/navigation_button_video"
        	android:layout_weight="0.3"
        	android:text="@string/rec_video"
       	 	style="@style/btnStyleArsenic" />
        
        <Button 
    		android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:id="@+id/navigation_button_help"
        	android:layout_weight="0.3"
        	android:text="@string/exit"
       	 	style="@style/btnStyleArsenic" />
        
    	<!-- <ImageButton 
    	    android:id="@+id/navigation_button_picture"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.3"
    	    android:contentDescription="@string/navigation_picture_button"/>
    	
		<ImageButton
		    android:id="@+id/navigation_button_video"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.3"
		    android:contentDescription="@string/navigation_video_button"/>
        
		<ImageButton
		    android:id="@+id/navigation_button_help"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.3"
		    android:contentDescription="@string/navigation_help_button"/> -->
		
   	</LinearLayout>
    
</LinearLayout>
