<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TabHost 
    	    android:id="@+id/route_tabhostinfo"
        	android:layout_width="match_parent"
        	android:layout_height="0dip"
        	android:layout_weight="1" >
        
    	    <LinearLayout
          		android:id="@+id/route_tabContentLinear"
                android:layout_width="match_parent"
               	android:layout_height="match_parent"
                android:orientation="vertical" >
                
    	   		<TabWidget
                	android:id="@android:id/tabs"
                	android:layout_width="match_parent"
                	android:layout_height="wrap_content"
                	android:visibility="visible" >
            	</TabWidget>     
    	        
    	   		<FrameLayout
                	android:id="@android:id/tabcontent"
                	android:layout_width="match_parent"
                	android:layout_height="match_parent"
                	android:padding="5dp" >
    	   		
    	   		    <LinearLayout 
    	   		        android:id="@+id/route_tabmap"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical" >
    	   		    
    	   		    	<LinearLayout
    						android:layout_width="match_parent"
    						android:layout_height="0dp"
    						android:layout_weight="1.0"
    						android:orientation="vertical" >

     					<ImageView
        					android:id="@+id/route_mapimage"
        					android:layout_width="wrap_content"
        					android:layout_height="wrap_content"/>
     					
						</LinearLayout>
	
						<LinearLayout
        					android:layout_width="fill_parent"
        					android:layout_height="wrap_content"
        					android:orientation="vertical">

        				<Button
            				android:id="@+id/buttonStart"
           					android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:layout_weight="1"
            				style="@style/btnStyleArsenic"
            				android:text="@string/start" />

        				<Button
            				android:id="@+id/buttonDelete"
            				android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:layout_weight="1"
            				style="@style/btnStyleArsenic"
            				android:text="@string/delete" />
        				
        				<Button
            				android:id="@+id/buttonExit"
            				android:layout_width="match_parent"
            				android:layout_height="wrap_content"
            				android:layout_weight="1"
            				style="@style/btnStyleArsenic"
            				android:text="@string/exit" />
        				
  					 </LinearLayout>
    	   		 	</LinearLayout>
    	   		 
    	   		    <LinearLayout 
    	   		        android:id="@+id/route_tabinfo"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical" >
						
    	   		        
    	   		         <TextView
        					android:id="@+id/route_textduration"
        					android:layout_width="wrap_content"
        					android:layout_height="wrap_content"
        					android:textAppearance="?android:attr/textAppearanceMedium" />
    	   		         
    	   		         <TextView
        					android:id="@+id/route_textdifficulty"
        					android:layout_width="wrap_content"
        					android:layout_height="wrap_content"
        					android:textAppearance="?android:attr/textAppearanceMedium" />
    	   		         
    	   		         <TextView
        					android:id="@+id/route_textsupport"
        					android:text="@string/support"
        					android:layout_width="wrap_content"
        					android:layout_height="wrap_content"
        					android:textAppearance="?android:attr/textAppearanceMedium" />
    	   		         
    	   		         <ListView
    						android:id="@+id/route_listviewPlaces"
    						android:layout_width="match_parent"
    						android:layout_height="wrap_content" />
    	   		         
					</LinearLayout>
    	   		</FrameLayout>
    	    </LinearLayout>
   		</TabHost>    
    
</LinearLayout>
